# schematools

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/schematools/: apache_arrow.py  arrow.py  convert.py
src/schematools/jsonschema/: __init__.py  array.py  base.py  flatten.py  numeric.py  object_.py  parse.py  string.py  types.py
tests/: test_jsonschema_to_arrow.py
tests/convert/: test_arrow_to_jsonschema.py  test_jsonschema_to_arrow.py
tests/jsonschema/: test_array_type.py  test_boolean_type.py  test_flatten.py  test_null_type.py  test_numeric_types.py  test_object_types.py  test_string_types.py
